learning paths working

--- a/src/app.css
+++ b/src/app.css
@@ -43,6 +43,7 @@
     --ring: 20, 14.3%, 4.1%;
     
     --radius: 0.5rem;
+    --success: 20, 14.3%, 4.1%;
   }
 
   .dark {
@@ -56,7 +57,7 @@
     --base-200: 220, 17%, 10%;
     --base-300: 220, 18%, 5%;
     --base-content: 60 9.1% 97.8%;
-    
+
     --muted: 12, 6.5%, 15.1%;
     --muted-foreground: 24, 5.4%, 63.9%;
     
